# AI-Powered-Internship-Evaluation-System

./: README.md  pyproject.toml  requirements.txt
evaluation/: README.md
evaluation/src/evaluation/: main.py
evaluation/src/evaluation/config/: tasks.yaml
src/evaluation/: crew.py
src/evaluation/config/: agents.yaml
