[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = "Evaluation using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
evaluation = "evaluation.main:run"
train = "evaluation.main:train"
replay = "evaluation.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
